--- a/src/app/dynamic/dynamic.component.html
+++ b/src/app/dynamic/dynamic.component.html
@@ -1,41 +1,43 @@
+
+<div>
+      <div class="type">Title</div>
+      <h1>{{data.response[0].Title}}</h1>
+      <hr>
+</div>
+
 <h1>username</h1>
 <input type="text" [(ngModel)]="username">
-<br>
-<br>
-<br>
-<br>
+<hr>
+
+<h1>user email</h1>
+<input type="text" [(ngModel)]="useremail">
+<hr>
 
 <div *ngFor="let item of this.data.response; let i = index">
   <ng-container [ngSwitch]="item.type">
 
-    <div *ngSwitchCase="'Title'">
-      <div class="type">{{item.type}}</div>
-      <h1>{{item.data.formTitle}}</h1>
-      <hr>
-    </div>
-
     <div *ngSwitchCase="'Short Answer'">
       <div class="type">{{item.type}}</div>
-      <h1>{{item.data.question}}</h1>
-      <input type="text" [name]="'Short Answer-' + item.data.question">
+      <h1>{{item.question}}</h1>
+      <input type="text" [name]="'Short Answer-' + item.question">
       <hr>
     </div>
 
     <div *ngSwitchCase="'Number'">
       <div class="type">{{item.type}}</div>
-      <h1>{{item.data.question}}</h1>
-      <input type="text" [name]="'Number-' + item.data.question">
+      <h1>{{item.question}}</h1>
+      <input type="text" [name]="'Number-' + item.question">
       <hr>
     </div>
 
     <div *ngSwitchCase="'Email'">
       <div class="type">{{item.type}}</div>
-      <h1>{{item.data.question}}</h1>
-      <input type="text" [name]="'Email-' + item.data.question">
+      <h1>{{item.question}}</h1>
+      <input type="text" [name]="'Email-' + item.question">
       <hr>
     </div>
 
-    <input *ngSwitchDefault type="text">
+    <p *ngSwitchDefault></p>
   </ng-container>
 </div>
 
