--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -1,4 +1,4 @@
-<form class="example-form">
+<!-- <form class="example-form">
   <mat-form-field class="example-full-width">
     <mat-label>Form Title🦚</mat-label>
     <input matInput placeholder="How are you today?" value="" />
@@ -8,4 +8,6 @@
     <mat-label>Here you can describe the form and add content📜✒️</mat-label>
     <textarea matInput placeholder="I am feeling fantastic!"></textarea>
   </mat-form-field>
-</form>
+</form> -->
+
+Thank you for your response
