the final commit

--- a/src/app/create-form/create-form.component.html
+++ b/src/app/create-form/create-form.component.html
@@ -1,6 +1,6 @@
 <div cdkDropListGroup>
   <div class="container" id="formElements">
-    <h3></h3>
+    <h3>Draggable UI</h3>
 
     <div
       cdkDropList
@@ -137,7 +137,7 @@
           />
         </div>
 
-        <!-- improve this field -->
+         <!-- improve and implement this feature -->
 
         <div *ngSwitchCase="'Single Correct'" class="form-item">
           <label for="question">Question</label>
@@ -213,4 +213,14 @@
       create-form
     </button>
   </div>
+</div>
+
+
+<div class="displayLabels">
+  Form <br>layout
+</div>
+
+
+<div class="displayLabels2">
+  Actual <br> Form
 </div>
