--- a/src/app/create-form/create-form.component.scss
+++ b/src/app/create-form/create-form.component.scss
@@ -137,3 +137,19 @@ button:hover {
 .option label {
   margin-right: 10px;
 }
+
+.displayLabels{
+  position: absolute;
+  top: 7px;
+left: 134px;
+font-size: large;
+}
+
+
+
+.displayLabels2{
+  position: absolute;
+  top: 7px;
+left: 300px;
+font-size: large;
+}
