--- a/src/app/land/land.component.html
+++ b/src/app/land/land.component.html
@@ -1,7 +1,7 @@
 <h1>🦚This is Angular SurveyApp🦉</h1>
 <div class="main">
   <div class="contain">
-    <button routerLink="/login" class="login">Login</button>
-    <button routerLink="/signup" class="signup">Sign up</button>
+    <span>If you already have an account ----><button routerLink="/login" class="login">Login</button></span>
+    <span>If you are new here -----------------------><button routerLink="/signup" class="signup">Sign up</button></span>
   </div>
 </div>
